--- a/ProyectoSistemaBancario/.gitignore
+++ b/ProyectoSistemaBancario/.gitignore
@@ -1,3 +1,6 @@
+*.idea
+*.iml
+ProyectoSistemaBancario.src.main.java.org.informatorio.ConexionDB.ConexionDB
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
