--- a/ProyectoSistemaBancario/pom.xml
+++ b/ProyectoSistemaBancario/pom.xml
@@ -23,6 +23,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+   <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.8</version>
+   </dependency>
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
